# iterator

./: HOWTORUN.md  HOWTOSPECK.md  SETUP.md  pyproject.toml
ai_refactor/: aider_bridge.py  cli.py  config.py  context_manager.py  crew_agents.py  git_utils.py  prd_generator.py  ralph_adapter.py  spec_loader.py  workflow.py
iterator/: README.md
iterator/.github/workflows/: ai-refactor.yml
iterator/ai_refactor/: cli.py  config.py  crew_agents.py  git_utils.py
multi-repo-ai-refactor/: SETUP.md
multi-repo-ai-refactor/ai_refactor/: config.py  crew_agents.py  github_integration.py  ralph_adapter.py  workflow.py
multi-repo-ai-refactor/examples/: ai-refactor.example.yml  ralph_config_example.sh
specs/test-feature/: prd.json  spec.md  tasks.md
